--- a/src/Components/Form/Button.module.scss
+++ b/src/Components/Form/Button.module.scss
@@ -2,6 +2,8 @@
   padding: 1rem 0.8rem;
   border-radius: 0.4rem;
   background-color: var(--gelo);
+  font-size: 1.6rem;
+  text-transform: uppercase;
 
   &:hover {
     background-color: var(--gelo-escuro);
