--- a/src/Components/Helpers/Card.module.scss
+++ b/src/Components/Helpers/Card.module.scss
@@ -4,20 +4,31 @@
   border-radius: 0.4rem;
   display: grid;
   gap: 1rem;
+  height: 100%;
 }
 
 .img,
 img {
-  object-fit: contain;
+  object-fit: cover;
   object-position: center center;
   width: 100%;
   height: 20rem;
   border-radius: 0.4rem;
+  border: #dfdfdf 1px solid;
 }
 
 .cardInfo {
+  padding-top: 1.6rem;
+  height: 10rem;
+  overflow-y: auto;
+
   h2 {
     margin-bottom: 0.8rem;
     font-size: 3.2rem;
+  }
+
+  p {
+    word-break: break-all;
+    width: 100%;
   }
 }
