--- a/src/Components/Helpers/Card.module.scss
+++ b/src/Components/Helpers/Card.module.scss
@@ -1,10 +1,10 @@
 .card {
   background-color: var(--gelo);
-  padding: 2.4rem;
-  border-radius: 0.4rem;
+  border-radius: 0.8rem;
   display: grid;
   gap: 1rem;
   height: 100%;
+  overflow: hidden;
 }
 
 .img,
@@ -12,15 +12,13 @@ img {
   object-fit: cover;
   object-position: center center;
   width: 100%;
-  height: 20rem;
-  border-radius: 0.4rem;
-  border: #dfdfdf 1px solid;
+  height: 26rem;
 }
 
 .cardInfo {
   padding-top: 1.6rem;
   height: 10rem;
-  overflow-y: auto;
+  padding: 1.6rem;
 
   h2 {
     margin-bottom: 0.8rem;
@@ -29,6 +27,6 @@ img {
 
   p {
     word-break: break-all;
-    width: 100%;
+    overflow-y: auto;
   }
 }
