--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -2,5 +2,42 @@
   background-color: #eee;
   box-shadow: 5px 0px 0px 0px #ddd;
   height: 100vh;
-  padding: 1.6rem;
+  padding: 1.6rem 0;
+  h1 {
+    font-size: 3.6rem;
+    text-align: center;
+    margin-bottom: 1.6rem;
+  }
+}
+
+.menuNav {
+  display: flex;
+  flex-direction: column;
+
+  a {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    height: 5rem;
+    padding: 0 1rem;
+    font-size: 1.8rem;
+
+    &:hover {
+      background-color: var(--gelo-escuro);
+    }
+  }
+
+  :global(.active) {
+    background-color: var(--gelo-escuro);
+  }
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+
+    path {
+      fill: #212121;
+    }
+  }
 }
