--- a/src/Components/Helpers/Card.module.scss
+++ b/src/Components/Helpers/Card.module.scss
@@ -5,14 +5,28 @@
   gap: 1rem;
   height: 100%;
   overflow: hidden;
+
+  &:hover {
+    background-color: var(--gelo-escuro);
+  }
+
+  &:hover img {
+    scale: 1.05;
+    filter: brightness(0.6);
+  }
 }
 
-.img,
 img {
   object-fit: cover;
   object-position: center center;
   width: 100%;
   height: 26rem;
+  transition: 0.3s ease;
+}
+
+.img {
+  height: 26rem;
+  overflow: hidden;
 }
 
 .cardInfo {
