--- a/src/Components/Helpers/SearchBookmark.module.scss
+++ b/src/Components/Helpers/SearchBookmark.module.scss
@@ -1,16 +1,17 @@
-.input {
-  label {
-    margin-bottom: 0.8rem;
-    font-size: 2rem;
-  }
+.search {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  position: relative;
 
   input {
     background-color: var(--gelo);
     padding: 1rem;
     border-radius: 0.8rem;
-    width: 100%;
-    height: 4rem;
     transition: 0.2s ease;
+    grid-column: 1;
+    height: 4rem;
+    width: 40rem;
 
     &:hover,
     &:focus {
