--- a/src/Components/Bookmark/BookmarkCreate.module.scss
+++ b/src/Components/Bookmark/BookmarkCreate.module.scss
@@ -15,10 +15,6 @@
     gap: 1.6rem;
   }
 
-  .cardPreview {
-    grid-column: 2;
-  }
-
   .cards {
     grid-column: 1 / -1;
     margin-top: 2.4rem;
@@ -43,5 +39,13 @@
 
   button {
     margin-top: 1.6rem;
+  }
+
+  @media screen and (width <= 1000px) {
+    grid-template-columns: 1fr;
+
+    .cardPreview {
+      grid-row: 2;
+    }
   }
 }
