--- a/src/Components/Bookmark/BookmarkList.module.scss
+++ b/src/Components/Bookmark/BookmarkList.module.scss
@@ -4,4 +4,8 @@
   gap: 1.6rem;
   flex-wrap: wrap;
   justify-content: center;
+
+  @media screen and (width <= 1000px) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
