--- a/src/Components/Helpers/Card.module.scss
+++ b/src/Components/Helpers/Card.module.scss
@@ -16,17 +16,23 @@
   }
 }
 
-img {
-  object-fit: cover;
-  object-position: center center;
-  width: 100%;
-  height: 26rem;
-  transition: 0.3s ease;
-}
-
 .img {
   height: 26rem;
   overflow: hidden;
+  background-color: var(--gelo-escuro);
+
+  & img {
+    object-fit: cover;
+    object-position: center center;
+    width: 100%;
+    height: 26rem;
+    transition: 0.3s ease;
+    border: none;
+  }
+
+  & img[src=""] {
+    display: none;
+  }
 }
 
 .cardInfo {
