--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -7,12 +7,13 @@
   height: 100vh;
   display: grid;
   grid-template-columns: 1fr 4fr;
+
   @media screen and (width <= 1000px) {
-    grid-template-columns: 1fr;
+    display: block;
   }
 
   .pages {
-    overflow: scroll;
+    overflow-y: scroll;
     // grid-template-rows: 1fr;
   }
 }
