--- a/src/Components/Menu/Menu.module.scss
+++ b/src/Components/Menu/Menu.module.scss
@@ -70,20 +70,20 @@
 
 .mobileMenu {
   position: relative;
-  max-height: 100%;
+  // max-height: 100%;
 
   .menuNav {
     z-index: 10;
     background-color: #eee;
     border-radius: 0.4rem;
     position: absolute;
-    left: -100%;
+    right: -100%;
     transition: 0.3s ease;
     @include menu-items-style();
   }
 
   &.mobileMenuActive .menuNav {
-    left: 0;
+    right: 0;
   }
 }
 
