--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,7 +6,7 @@
   overflow-y: auto;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 4fr;
+  grid-template-columns: auto 4fr;
 
   @media screen and (width <= 1000px) {
     display: block;
@@ -14,6 +14,6 @@
 
   .pages {
     overflow-y: scroll;
-    // grid-template-rows: 1fr;
+    margin-top: 3rem;
   }
 }
